--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ import groovy.transform.Memoized
 
 buildscript {
   repositories {
+    maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
     jcenter()
     gradlePluginPortal()
     maven { url "http://palantir.bintray.com/releases" }
